force-app/main/default/objects/SyncAuditLog__c/SyncAuditLog__c.object-meta.xml
<CustomObject>
    <description>Immutable audit trail of every sync decision and outcome</description>
    <label>Sync Audit Log</label>
    <nameField>
        <displayFormat>AuditLog-{0000}</displayFormat>
        <label>Audit Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>