force-app/main/default/objects/SyncAuditLog__c/fields/ApplyError__c.field-meta.xml
<CustomField>
    <fullName>ApplyError__c</fullName>
    <description>API error message if apply operation failed</description>
    <label>Apply Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>