force-app/main/default/objects/SyncAuditLog__c/fields/ApplyStatus__c.field-meta.xml
<CustomField>
    <fullName>ApplyStatus__c</fullName>
    <description>Status of applying the change to target org</description>
    <label>Apply Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>