force-app/main/default/objects/SyncAuditLog__c/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <description>Name of the field being synced</description>
    <label>Field Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>