force-app/main/default/objects/SyncAuditLog__c/fields/ManualResolutionAt__c.field-meta.xml
<CustomField>
    <fullName>ManualResolutionAt__c</fullName>
    <description>Timestamp when manual resolution occurred</description>
    <label>Manual Resolution At</label>
    <type>DateTime</type>
</CustomField>