force-app/main/default/objects/SyncAuditLog__c/fields/ManualResolutionBy__c.field-meta.xml
<CustomField>
    <fullName>ManualResolutionBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who manually resolved a conflict</description>
    <label>Manual Resolution By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SyncAuditLogs</relationshipName>
    <type>Lookup</type>
</CustomField>