force-app/main/default/objects/SyncAuditLog__c/fields/OrgAValue__c.field-meta.xml
<CustomField>
    <fullName>OrgAValue__c</fullName>
    <description>Value in Org A at time of sync</description>
    <label>Org A Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>