force-app/main/default/objects/SyncAuditLog__c/fields/OrgBValue__c.field-meta.xml
<CustomField>
    <fullName>OrgBValue__c</fullName>
    <description>Value in Org B at time of sync</description>
    <label>Org B Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>