force-app/main/default/objects/SyncAuditLog__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>Result of the sync operation</description>
    <label>Outcome</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>