force-app/main/default/objects/SyncAuditLog__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>Record identifier from source org</description>
    <label>Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>