force-app/main/default/objects/SyncAuditLog__c/fields/ResolvedValue__c.field-meta.xml
<CustomField>
    <fullName>ResolvedValue__c</fullName>
    <description>Value chosen by resolution strategy</description>
    <label>Resolved Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>