force-app/main/default/objects/SyncAuditLog__c/fields/SnapshotValue__c.field-meta.xml
<CustomField>
    <fullName>SnapshotValue__c</fullName>
    <description>Baseline value before sync</description>
    <label>Snapshot Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>