force-app/main/default/objects/SyncAuditLog__c/fields/SourceOrg__c.field-meta.xml
<CustomField>
    <fullName>SourceOrg__c</fullName>
    <description>Origin org of the change (OrgA or OrgB)</description>
    <label>Source Org</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>