force-app/main/default/objects/SyncAuditLog__c/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <description>Conflict resolution strategy applied</description>
    <label>Strategy</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>