force-app/main/default/objects/SyncAuditLog__c/fields/SyncedAt__c.field-meta.xml
<CustomField>
    <fullName>SyncedAt__c</fullName>
    <description>Timestamp when sync was executed</description>
    <label>Synced At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>