force-app/main/default/objects/SyncAuditLog__c/fields/TargetOrg__c.field-meta.xml
<CustomField>
    <fullName>TargetOrg__c</fullName>
    <description>Destination org where change was applied</description>
    <label>Target Org</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>